--- a/Resources/assets/scss/theme.scss
+++ b/Resources/assets/scss/theme.scss
@@ -64,3 +64,38 @@
     margin-right: 0.5em;
     vertical-align: -0.25em;
 }
+.fa-user:before {
+    background-image: url('../images/icons/ic_person.svg');
+    vertical-align: middle;
+}
+
+.fa-home:before {
+    background-image: url('../images/icons/ic_home.svg');
+    vertical-align: middle;
+}
+
+//tabs
+.c-tabbed-pages {
+	background-color: tint($primary, 86%);
+	.navbar-nav {
+		float: none;
+	}
+	li {
+		border-right: 1px solid $contrast-alt;
+    	&:last-child {
+			border: none;
+    	}
+	}
+	li a {
+    	padding: 1.2em 1.6em;
+    	font-weight: 700;
+    	font-size: 1.125rem;
+    	background-color: tint($primary, 94%);
+	}
+	.active a {
+		background-color: $contrast-alt;
+	}
+	.first a {
+		padding-left: $padding;
+	}
+}
