Chore: hiding more stuff

--- a/Resources/assets/scss/theme.scss
+++ b/Resources/assets/scss/theme.scss
@@ -130,6 +130,7 @@
 		right: 0;
 	    border: none;
     	padding: 1rem;
+    	padding-top: 2rem;
     	box-shadow: 0 4px 13px rgba(0,0,0,.12);
 	}
 	.user-header img {
