--- a/Resources/assets/scss/_cropper.scss
+++ b/Resources/assets/scss/_cropper.scss
@@ -1,30 +1,41 @@
 .cropper {
-	.cropper-canvas-container {
-		margin-bottom: 0 !important;
-		margin-top: 0.15rem;
-	}
-
-	background-color: $light-gray;
+	position: relative;
+	background-color: tint($primary, 90%);
 	display: flex;
 	flex-direction: column;
+	> .row {
+		position: relative;
+		z-index: 2;
+	}
 	.col-md-12, .form-group, .sonata-ba-field {
 		position: static;
 	}
-	
 	.btn {
 		color: #fff !important;
 	    background-color: #222 !important;
 	    border-color: #222 !important;
 	}
-
 	.image-url-input.input-sm.form-control, .col-md-8.cropper-remote {
 		display: none;
 	}
-
 	.cropper-canvas-container {
+		margin-bottom: 0 !important;
+		margin-top: 0.15rem;
 		order: 2;
 	}
-
+	.cropper-canvas-has-delete.delete {
+		position: relative;
+		z-index: 1;
+		&:after {
+			content: '';
+			background-color: rgba(0,0,0, 0.3);
+			top: 0;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			position: absolute;
+		}
+	}
 	.cropper-local {
 		width: 100%;
 		input.hidden {
@@ -34,18 +45,58 @@
 			display: none;
 		}	
 	}
-
 	.modal-lg {
 		width: 1000px;
  		.modal-content {
  			padding: 0 20px;
  		}
 	}
-
+	.sonata-ba-field {
+		float: none;
+	    width: 100%;
+	    position: relative;
+	    .checkbox {
+		    position: absolute;
+	    	right: 0;
+	    	input {
+	    		opacity: 0;
+	    	}
+	    }
+	}
+	.form-group {
+		margin: 0;
+		padding: 0;
+	}
+	.sonata-ba-field input[type="checkbox"]:checked + span {
+		background-color: tint($primary, 50%);
+		&:hover {
+			background-color: tint($primary, 40%);
+		}
+	}
+	&:hover {
+		cursor: pointer;
+	}
 }
-
-
-
-.cropper:hover {
-	cursor: pointer;
+.cropper .control-label__text, .vich-image .checkbox label {
+   	background: url('../images/icons/ic_close_white.svg') $danger no-repeat 50%;
+    background-size: 18px;
+    display: block;
+    height: 3rem;
+    width: 3rem;
+    text-indent: -999em;
+    transition: .15s ease-in-out;
+    z-index: 2;
+    // opacity: 0;
+    &:hover {
+    	background-color: darken($danger, 5%);
+    }
+}
+.sonata-ba-field {
+	 input[type="file"] {
+		width: 100%;
+		padding: 0.8em 1em;
+    	border-color: tint($primary, 84%);
+		background-color: $contrast-alt;
+		border: 1px solid tint($primary, 80%);
+	}
 }
