--- a/Resources/assets/scss/_edit.scss
+++ b/Resources/assets/scss/_edit.scss
@@ -81,6 +81,7 @@
         bottom: 0;
         left: 20%; 
         right: 0;
+        z-index: 100;
         > div {
             position: relative;
         }
