Feature: sort arrows before title

--- a/Resources/assets/scss/_alert.scss
+++ b/Resources/assets/scss/_alert.scss
@@ -56,6 +56,10 @@
     background-color: $warning;
     border-color: $warning;
 }
+.alert-danger {
+    color: $contrast-alt;
+    border-color: $danger !important;
+}
 @media only screen and (min-width: $break-md) {
     .alert-dismissable {
         left: 20%;
