--- a/Resources/assets/scss/_list.scss
+++ b/Resources/assets/scss/_list.scss
@@ -74,7 +74,7 @@ th.sonata-ba-list-field-header-order-asc.sonata-ba-list-field-order-active a:hov
     border-left: 4px solid transparent;
     position: absolute;
     top: 50%;
-    right: calc(100% + 0.5rem);
+    right: calc(100% + 0.35rem);
 }
 th.sonata-ba-list-field-header-order-desc a:after,
 th.sonata-ba-list-field-header-order-desc a:hover:after,
@@ -132,6 +132,13 @@ th.sonata-ba-list-field-header-order-desc.sonata-ba-list-field-order-active a:ho
         bottom: 0;
         left: 20%;
         right: 0;
+        transform: translateY(100%);
+        transition: transform 0.2s;
         z-index: 5;
+    }
+    .showSubmit {
+         .c-footer-actions .form-inline {
+            transform: translateY(0);
+         }
     }
 }
