Feature: Add new classes for general settings

--- a/Resources/assets/scss/_base.scss
+++ b/Resources/assets/scss/_base.scss
@@ -5,7 +5,7 @@ html {
 }
 body { 
     font-size: 87.5%;
-    background-color: tint($primary, 91%);
+    background-color: #fff;
     color: shade($primary, 40%);
     overflow-x: hidden;
 }
