--- a/Resources/assets/scss/_nav.scss
+++ b/Resources/assets/scss/_nav.scss
@@ -1,4 +1,8 @@
 // nav
+.c-mobile-header {
+    margin-top: auto;
+}
+
 @media only screen and (max-width: $break-md) {
     .c-mobile-header {
         position: fixed;
