--- a/Resources/assets/scss/_nav.scss
+++ b/Resources/assets/scss/_nav.scss
@@ -3,6 +3,10 @@
     margin-top: auto;
 }
 
+.navbar {
+    border: 0;
+}
+
 @media only screen and (max-width: $break-md) {
     .c-mobile-header {
         position: fixed;
