--- a/Resources/assets/scss/_delete_modal.scss
+++ b/Resources/assets/scss/_delete_modal.scss
@@ -22,9 +22,9 @@
 	}
 	.mfp-close {
         background-image: url('../images/icons/ic_close_white.svg');
-	    background-size: 18px;
+	    background-size: 12px;
 	    background-repeat: no-repeat;
-	    background-color: tint($primary, 35%);
+	    background-color: #141414;
 	    &:hover,
 	    &:focus,
 	    &:active {
@@ -32,15 +32,15 @@
 	    }
 	    background-position: center center;
 	    display: block;
-	    height: 3rem;
-	    width: 3rem;
-	    right: auto;
-	    left: 100%;
-	    top: 1rem;
+	    height: 1.7rem;
+	    width: 1.7rem;
+	    right: 0;
+	    top: 0;
 	    opacity: 1;
 	    text-indent: -999em;
 	    transition: .15s ease-in-out;
 	    z-index: 2;
+	    position: absolute;
 	}
 	.btn-success {
 		@extend .btn;
