Feature: Fix the download button

--- a/Resources/assets/scss/theme.scss
+++ b/Resources/assets/scss/theme.scss
@@ -10,6 +10,7 @@
 @import "edit";
 @import "tabs";
 @import "delete_modal";
+@import "dropdown";
 @import "cropper";
 @import "pagination";
 @import "alert";
