--- a/Resources/assets/scss/_layout.scss
+++ b/Resources/assets/scss/_layout.scss
@@ -9,8 +9,8 @@
         width: 20%;
     }
     .c-page__content-wrapper {
-        left: 20%;
-        width: 80%;
+        left: 21%;
+        width: 74%;
         position: relative;
     }
     .c-main-header {
@@ -30,5 +30,12 @@
             display: table;
             clear: both;
         }
+    }
+}
+
+@media only screen and (min-width: 85em) {
+    .c-page__content-wrapper {
+        left: 20%;
+        width: 80%;
     }
 }
