Feature: Make the white container min height 100vh

--- a/Resources/assets/scss/_layout.scss
+++ b/Resources/assets/scss/_layout.scss
@@ -31,6 +31,12 @@
             clear: both;
         }
     }
+
+    .c-main-container {
+        min-height: 100vh;
+        background-color: #fff;
+        padding-bottom: 8rem;
+    }
 }
 
 @media only screen and (min-width: 85em) {
