--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -30,7 +30,7 @@
         <div class="c-page__content-wrapper">
             {% block sonata_page_content %}
         
-                <section class="c-content u-container">
+                <section class="c-content u-container c-main-container">
                     <div class="u-bg-contrast-alt u-headerspace" style="position: relative;">
 
                         {% if _navbar_title is not empty  %}
