Feature: Be compatible to Symfony4.2 by adapt to the convention

--- a/Resources/views/CRUD/edit.html.twig
+++ b/Resources/views/CRUD/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends "SonataAdminBundle:CRUD:edit.html.twig" %}
+{% extends "@SonataAdmin/CRUD/edit.html.twig" %}
 
 {% block body_attributes %}class="sonata-bc skin-black fixed just-records-edit"{% endblock %}
 
