--- a/Resources/views/CRUD/list.html.twig
+++ b/Resources/views/CRUD/list.html.twig
@@ -1,4 +1,4 @@
-{% extends "SonataAdminBundle:CRUD:list.html.twig" %}
+{% extends "@SonataAdmin/CRUD/list.html.twig" %}
 
 {% block body_attributes %}class="sonata-bc skin-black fixed just-records-list {% if _tab_menu is not empty %}just-records-list--tabs{% endif %}"{% endblock %}
 
